
$(PROGRAMS): $(LDEPS)

okwslib_LTLIBRARIES = libamt.la

libamt_la_SOURCES = mtdispatch.C

okwsinclude_HEADERS = amt.h

EXTRA_DIST = .cvsignore
CLEANFILES = core *.core *~ *.rpo

MAINTAINERCLEANFILES = Makefile.in config.guess config.h.in config.sub \
	configure install-sh ltconfig ltmain.sh missing mkinstalldirs \
	stamp-h.in 
